--- a/css/styles.css
+++ b/css/styles.css
@@ -100,4 +100,23 @@ a{
 .formulario__microfono{
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/726px-Google_mic.svg.png');
 }
+.formulario-botones{
+    text-align: center;
+}
+.boton{
+    height: 36px;
+    background-color:#f2f2f2;
+    border:0;
+    font-size:14px;
+    color:#5f6368;
+    border-radius:5px;
+    padding: 0 15px;
+    margin-right: 15px;
+}
+.boton:hover{
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px #000001;
+    color: #222;
+}
+
 
