--- a/css/styles.css
+++ b/css/styles.css
@@ -119,4 +119,32 @@ a{
     color: #222;
 }
 
-
+/* Footer */
+footer{
+    width: 100%;
+    height: 6rem;
+    position:absolute;
+    bottom: 0;
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    padding: 0 2rem;
+    border-top: 1px solid #e4e4e4;
+    background-color: #f2f2f2;
+}
+.footer__derecho, .footer__izquierdo{
+    margin:0;
+    padding:0;
+    display: flex;
+    list-style: none;
+    column-gap: 1rem;
+}
+.footer__derecho{
+    justify-self: right;
+}
+.footer__izquierda{
+    justify-self: left;
+}
+.footer__enlace{
+    color:#5f6368;
+}
